LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/Churn_Risk__c.object-meta.xml
<CustomObject>
    <description>Churn Risk records are created from a Lightning Component on the Account page. They link to the Account and the Renewal Opportunity, and join together metrics for reporting purposes. Multiple Churn Risks can be created (though no more than one at a time for one Account) over the course of a contract to track revenue at risk, and may be remediated.</description>
    <label>Churn Risk</label>
    <nameField>
        <label>Churn Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Churn Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>