LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>AUTO - Since Churn Risks can only be created using the button on Accounts, this will be automatically associated with the record.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Churn Risks</relationshipLabel>
    <relationshipName>Churn_Risks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>