LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>AUTO - The name of the Account Owner.</description>
    <formula>Account__r.Owner.FirstName &amp; &quot; &quot; &amp; Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>