LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <description>MANUAL - Actions to remediate the risk. Editable in create component as well as page layout.</description>
    <label>Action Plan</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>