LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/At_Risk_ARR__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_ARR__c</fullName>
    <description>MANUAL - The portion of current ARR that is at risk. Editable via entry UI and standard page layout.</description>
    <label>At Risk ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>