LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Churn_Probability__c.field-meta.xml
<CustomField>
    <fullName>Churn_Probability__c</fullName>
    <description>MANUAL - The likelihood that the At Risk ARR will churn. Editable via the entry UI and standard page layout.</description>
    <label>Churn Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>