LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>MANUAL - Memo field for the record. Editable via the entry UI and standard page layout.</description>
    <label>Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>