LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <description>AUTO - Calculated on creation according to Subscription Start and End Dates on the Account.</description>
    <label>Contract Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>