LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Expected_Churn__c.field-meta.xml
<CustomField>
    <fullName>Expected_Churn__c</fullName>
    <description>MANUAL - The date that we expect churn will occur. Editable via the entry UI and standard page layout.</description>
    <label>Expected Churn</label>
    <type>Date</type>
</CustomField>