LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/IsOpen__c.field-meta.xml
<CustomField>
    <fullName>IsOpen__c</fullName>
    <description>AUTO - For querying / reporting purposes. A risk is considered &quot;open&quot; if it does not have an outcome, and &quot;closed&quot; if it does.</description>
    <formula>ISBLANK(TEXT(Risk_Outcome__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open</label>
    <type>Checkbox</type>
</CustomField>