LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Loss_Details__c.field-meta.xml
<CustomField>
    <fullName>Loss_Details__c</fullName>
    <description>AUTO - Loss Details, if any, from the Renewal Opportunity.</description>
    <formula>Renewal_Opportunity__r.Loss_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Details</label>
    <type>Text</type>
</CustomField>