LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>AUTO - Set at creation and whenever date is changed by RISK classes. A text string of the form YYYY MM (literal) for sorting purposes.</description>
    <label>Month</label>
    <length>40</length>
    <type>Text</type>
</CustomField>