LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <description>AUTO - Adjusted based on Expected Churn Date.</description>
    <label>Quarter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>