LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AUTO - This is set by the create component when the user creates the Churn Risk record.</description>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Churn Risks</relationshipLabel>
    <relationshipName>Churn_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>