LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Risk_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Risk_Outcome__c</fullName>
    <description>MANUAL - The outcome of the risk process.</description>
    <label>Risk Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Logo Churn</fullName>
            </value>
            <value>
                <fullName>User Downsell</fullName>
            </value>
            <value>
                <fullName>Module Churn</fullName>
            </value>
            <value>
                <fullName>Recovered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>