LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <description>MANUAL - The status of the current risk process. Only the first three values are available on creation.</description>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Intend to Reduce</fullName>
            </value>
            <value>
                <fullName>Intend to Churn</fullName>
            </value>
            <value>
                <fullName>User Downsell</fullName>
            </value>
            <value>
                <fullName>Module Churn</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>