LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Risk_Theme__c.field-meta.xml
<CustomField>
    <fullName>Risk_Theme__c</fullName>
    <description>MANUAL - The theme of the risk. Roughly aligns to Loss Reasons.</description>
    <label>Risk Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>AE Churn</fullName>
            </value>
            <value>
                <fullName>Bad Fit</fullName>
            </value>
            <value>
                <fullName>COVID-Timing</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor - BlackLine</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>No Pain</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>