LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <description>MANUAL - The type of risk.</description>
    <label>Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Logo Churn</fullName>
            </value>
            <value>
                <fullName>User Downsell</fullName>
            </value>
            <value>
                <fullName>Module Churn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>