LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>AUTO - The CS tier from the Account.</description>
    <formula>TEXT(Account__r.Tier_Playbook__c)</formula>
    <label>Tier</label>
    <type>Text</type>
</CustomField>