LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR__c</fullName>
    <description>AUTO - The Current ARR from the Account.</description>
    <formula>Account__r.Current_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>