LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/fields/Weighted_At_Risk_ARR__c.field-meta.xml
<CustomField>
    <fullName>Weighted_At_Risk_ARR__c</fullName>
    <description>AUTO - The At Risk ARR, weighted according to probability.</description>
    <formula>Churn_Probability__c *  At_Risk_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted At Risk ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>