LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/listViews/All_Churn_Risks_new.listView-meta.xml
<ListView>
    <fullName>All_Churn_Risks_new</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Quarter__c</columns>
    <columns>Expected_Churn__c</columns>
    <columns>Churn_Probability__c</columns>
    <columns>Total_ARR__c</columns>
    <columns>At_Risk_ARR__c</columns>
    <columns>Weighted_At_Risk_ARR__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsOpen__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Open Churn Risks</label>
</ListView>