LWCLearnwithFLOWOrg/force-app/main/default/objects/Churn_Risk__c/listViews/My_Churn_Risks.listView-meta.xml
<ListView>
    <fullName>My_Churn_Risks</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Quarter__c</columns>
    <columns>Expected_Churn__c</columns>
    <columns>Churn_Probability__c</columns>
    <columns>Total_ARR__c</columns>
    <columns>At_Risk_ARR__c</columns>
    <columns>Weighted_At_Risk_ARR__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>IsOpen__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Churn Risks</label>
</ListView>